--- a/shopping_mall/.settings/org.eclipse.wst.common.component
+++ b/shopping_mall/.settings/org.eclipse.wst.common.component
@@ -29,7 +29,7 @@
         
         
         <property name="java-output-path" value="target/classes"/>
-        <property name="context-root" value="mall"/>
+        <property name="context-root" value="/"/>
                                 	
     
     
