로그인, 관리자리스트 생성 구현

--- a/shopping_mall/src/main/webapp/static/css/login.css
+++ b/shopping_mall/src/main/webapp/static/css/login.css
@@ -240,3 +240,15 @@
  .btncolor2 { 
     background-color: rgb(29, 29, 25);
  }
+ 
+ .parent{
+ 	position: relative;
+ }
+ #pw_msg{
+ 	position: absolute;
+ 	color : red;
+ 	right : 115px;
+ 	top : 2px;
+ 	font-size : 8px;
+ 	display: none;
+ }
