--- a/shopping_mall/src/main/webapp/static/css/category.css
+++ b/shopping_mall/src/main/webapp/static/css/category.css
@@ -202,3 +202,37 @@
     vertical-align: -1px;
     margin-right: 5px;
 }
+
+.parent{
+	position : relative;
+}
+.arrow {
+    position: absolute;
+    top: 25px;
+    left: 105px; /* 화살표의 위치 조정 */
+    transform: translateY(-50%);
+    pointer-events: none; /* 클릭 방지 */
+    font-size: 15px; /* 화살표 크기 조정 */
+    color: #999; /* 화살표 색상 조정 */
+}
+
+.dropdown-select {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 120px;
+    height: 30px;
+    opacity: 0;
+    cursor: pointer;
+}
+
+
+
+.item-input {
+    width: 95%; /* li의 폭에 맞춤 */
+    height: 95%; /* li의 높이에 맞춤 */
+    border: none; /* 기본 테두리 제거 */
+    box-sizing: border-box; /* 패딩과 테두리를 포함한 폭/높이 조정 */
+	margin: 0 0 3px 0;
+    text-align: center;
+}
