--- a/shopping_mall/src/main/webapp/static/css/product.css
+++ b/shopping_mall/src/main/webapp/static/css/product.css
@@ -229,6 +229,7 @@
     width:80px;
     color:white;
     cursor: pointer;
+    margin-right:5px;
 }
 .product_label {
     width: 100px;
@@ -242,5 +243,6 @@
 
 .product_text1 { 
     width: 100%;
-    height: 380px;
+    height: 400px;
+    font-size : 17px;
 }
