--- a/shopping_mall/src/main/webapp/static/css/product.css
+++ b/shopping_mall/src/main/webapp/static/css/product.css
@@ -1,4 +1,10 @@
 @charset "utf-8";
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .subpage_view { 
     width: inherit;
     height: auto;
