--- a/shopping_mall/src/main/webapp/static/css/product.css
+++ b/shopping_mall/src/main/webapp/static/css/product.css
@@ -252,3 +252,24 @@
     height: 400px;
     font-size : 17px;
 }
+.preview {
+	width:200px; 
+	height:175px; 
+	border : 2px dashed rgba(0,0,0,0.3);
+	display : flex;
+	justify-content: center;
+	align-items: center;
+	margin-right : 10px;
+}
+.plus{
+	font-size : 48px;
+	color : rgba(0,0,0,0.3);
+
+}
+.preview:hover {
+	cursor: pointer;
+	border : 2px dashed rgba(0,0,0,0.8);
+}
+.preview:hover > .plus {
+	color : rgba(0,0,0,0.8);
+}
