--- a/shopping_mall/src/main/webapp/static/css/product.css
+++ b/shopping_mall/src/main/webapp/static/css/product.css
@@ -48,8 +48,8 @@
 }
 .subpage_view2 > ul {
     width: inherit;
-    height: 30px;
-    line-height: 30px;
+    height: 35px;
+    line-height: 35px;
     text-align: center;
     display: flex;
     flex-direction:row;
@@ -60,8 +60,8 @@
     background-color: rgb(123, 102, 102);
 }
 .subpage_view2 > ul > li{
-    height: 30px;
-    line-height: 30px;
+    height: 35px;
+    line-height: 35px;
     text-align: center;
     font-size: 13px;
     font-family: 'Nanum Gothic', sans-serif;
@@ -272,4 +272,29 @@
 }
 .preview:hover > .plus {
 	color : rgba(0,0,0,0.8);
+}
+
+.btn_getImage{
+	padding: 2px 4px;
+	background-color: rgb(148, 122, 122);
+	border: 1px solid rgb(81, 61, 61);
+	color: white;
+}
+.btn_getImage:hover {
+	background-color: rgb(123, 102, 102);
+	cursor: pointer;
+}
+.image_box{
+	display: flex; 
+    justify-content: center;
+    align-items: center;
+	position : absolute;
+	background-color : white;
+	top: 50%;
+	left : 50%;
+	transform: translate(-50%, -50%);
+	width : 700px;
+	height : 300px;
+	border : 1px solid black;
+	z-index: 1000;
 }
