--- a/shopping_mall/src/main/webapp/static/css/product.css
+++ b/shopping_mall/src/main/webapp/static/css/product.css
@@ -285,7 +285,7 @@
 	cursor: pointer;
 }
 .image_box{
-	display: flex; 
+	display: none;
     justify-content: center;
     align-items: center;
 	position : absolute;
@@ -297,4 +297,39 @@
 	height : 300px;
 	border : 1px solid black;
 	z-index: 1000;
+}
+.modal{
+	position: fixed;
+  	top: 0;
+  	left: 0;
+  	width: 100%;
+  	height: 100%;
+  	background-color: rgba(0, 0, 0, 0.3);
+  	z-index: 999;
+  	cursor: pointer;
+  	display : none;
+}
+#imagePopup{
+	position : absolute;
+	background-color : white;
+	top: 50%;
+	left : 50%;
+	transform: translate(-50%, -40%);
+	width : 1000px;
+	height : 700px;
+	border : 1px solid black;
+	display : none;
+	z-index: 1001;
+}
+.close {
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    color: #b30000;
+    font-size: 35px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.close:hover {
+	color : red;
 }
