--- a/shopping_mall/.settings/org.eclipse.wst.common.component
+++ b/shopping_mall/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                    	
+                                        	
+    
     
     
     
@@ -9,7 +10,8 @@
     
     
     <wb-module deploy-name="mall-1.0.0-BUILD-SNAPSHOT">
-                                                                                
+                                                                                        
+        
         
         
         
@@ -19,7 +21,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                        		
+                                                                                		
+        
         
         
         
@@ -29,7 +32,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                        		
+                                                                                		
+        
         
         
         
@@ -39,7 +43,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                        		
+                                                                                		
+        
         
         
         
@@ -49,7 +54,9 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                        		
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+                                                                                		
+        
         
         
         
@@ -59,8 +66,9 @@
         
         
         <property name="java-output-path" value="target/classes"/>
-        <property name="context-root" value="mall"/>
-                                                                        	
+        <property name="context-root" value="/"/>
+                                                                                	
+    
     
     
     
@@ -70,7 +78,8 @@
     
     
     </wb-module>
-                                    
+                                        
+
 
 
 
